# agent-evaluation-assistant

./: .gitignore  CHANGELOG.md  CODE_WALKTHROUGH.md  COMPETITION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  NEXT_STEPS.md  PRE_COMMIT_CHECKS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SETUP.md
.github/workflows/: deploy.yml  release.yml  terraform.yml  test-sdk.yml  validate-infra.yml
assistant/: ADK_ARCHITECTURE.md  README.md
assistant/agent/: assistant_agent.py  requirements.txt  system_instruction.prompt  system_instruction_concise.prompt
assistant/agent/tools/: __init__.py  config_operations.py  config_validator.py  evaluation_script_generation.py  file_operations.py  infra_checker.py  terraform_operations.py
docs/: QUICKSTART.md  README.md
example_agents/: README.md  adk_agent.py  agent_config.yaml  custom_agent.py  eval_config.yaml  requirements.txt  run_evaluation.py  run_evaluation_adk.py  run_evaluation_custom.py
examples/simple_adk_agent/: README.md  adk_agent.py  agent.py  agent_with_config.py  eval_config.yaml  requirements.txt  run_evaluation.py  test_queries.py
sdk/: README.md  pyproject.toml
sdk/agent_evaluation_sdk/: __init__.py  cli.py  config.py  core.py  dataset.py  evaluation.py  logging.py  metrics.py  regression.py  tracing.py
sdk/agent_evaluation_sdk/templates/: eval_config.template.yaml
sdk/tests/: __init__.py  test_config.py  test_core.py  test_integration.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/dataset/: main.tf  outputs.tf  variables.tf
terraform/modules/logging/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
