[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evaluation-sdk"
version = "0.1.0"
description = "Production-ready evaluation infrastructure for AI agents"
requires-python = ">=3.12"

dependencies = [
    "google-cloud-logging>=3.10.0",
    "google-cloud-trace>=1.13.0",
    "google-cloud-monitoring>=2.21.0",
    "google-cloud-bigquery>=3.21.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools.package-data]
agent_evaluation_sdk = ["templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=agent_evaluation_sdk --cov-report=html --cov-report=term"

